sandbox/output
GildedRoseTest.java:36: error: cannot find symbol
            .map(GildedRose.generateUpdatedNormalItems());
                           ^
  symbol:   method generateUpdatedNormalItems()
  location: class GildedRose
GildedRoseTest.java:71: error: cannot find symbol
            .map(GildedRose.generateUpdatedNormalItems());
                           ^
  symbol:   method generateUpdatedNormalItems()
  location: class GildedRose
2 errors
